# TCAutoCreator

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  TASKS.md  Test Case AutoCreator_Implementation Plan.md  pyproject.toml
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  finalizer.py  researcher.py  strategist.py  worker.py
src/graph/: __init__.py  builder.py  router.py  state.py
src/hitl/: __init__.py  cli_prompt.py  protocol.py
src/loaders/: __init__.py  image_loader.py  pdf_loader.py  text_loader.py
src/models/: __init__.py  llm_clients.py  schemas.py
src/output/: __init__.py  csv_writer.py
src/prompts/: __init__.py  researcher.py  strategist.py  worker.py
tests/: test_graph_components.py  test_imports.py
tests/fixtures/: complex_spec.md
