[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-auto-creator"
version = "0.1.0"
description = "Generate QA test case drafts from specifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3,<0.4",
  "langgraph>=0.2,<0.4",
  "langchain-openai>=0.2,<0.4",
  "pydantic>=2.0,<3.0",
  "pypdf>=5.0,<6.0",
  "pdfplumber>=0.11,<0.12",
  "pillow>=11.0,<12.0",
  "typer>=0.15,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
tc-creator = "src.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

